tests/baselines/reference/objectTypesIdentityWithNumericIndexers1.errors.txt
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(30,1): error TS2463: Duplicate overload signature for foo1.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(31,1): error TS2463: Duplicate overload signature for foo1.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(34,1): error TS2463: Duplicate overload signature for foo1b.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(35,1): error TS2463: Duplicate overload signature for foo1b.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(38,1): error TS2463: Duplicate overload signature for foo1c.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(39,1): error TS2463: Duplicate overload signature for foo1c.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(42,1): error TS2463: Duplicate overload signature for foo2.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(43,1): error TS2463: Duplicate overload signature for foo2.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(46,1): error TS2463: Duplicate overload signature for foo3.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(47,1): error TS2463: Duplicate overload signature for foo3.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(50,1): error TS2463: Duplicate overload signature for foo4.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(51,1): error TS2463: Duplicate overload signature for foo4.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(54,1): error TS2463: Duplicate overload signature for foo5.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(55,1): error TS2463: Duplicate overload signature for foo5.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(58,1): error TS2463: Duplicate overload signature for foo5b.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(59,1): error TS2463: Duplicate overload signature for foo5b.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(62,1): error TS2463: Duplicate overload signature for foo5c.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(63,1): error TS2463: Duplicate overload signature for foo5c.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(66,1): error TS2463: Duplicate overload signature for foo5d.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(67,1): error TS2463: Duplicate overload signature for foo5d.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(70,1): error TS2463: Duplicate overload signature for foo6.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(71,1): error TS2463: Duplicate overload signature for foo6.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(74,1): error TS2463: Duplicate overload signature for foo7.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(75,1): error TS2463: Duplicate overload signature for foo7.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(78,1): error TS2463: Duplicate overload signature for foo8.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(79,1): error TS2463: Duplicate overload signature for foo8.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(82,1): error TS2463: Duplicate overload signature for foo9.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(83,1): error TS2463: Duplicate overload signature for foo9.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(86,1): error TS2463: Duplicate overload signature for foo10.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(87,1): error TS2463: Duplicate overload signature for foo10.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(90,1): error TS2463: Duplicate overload signature for foo11.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(91,1): error TS2463: Duplicate overload signature for foo11.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(94,1): error TS2463: Duplicate overload signature for foo11b.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(95,1): error TS2463: Duplicate overload signature for foo11b.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(98,1): error TS2463: Duplicate overload signature for foo11c.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(99,1): error TS2463: Duplicate overload signature for foo11c.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(102,1): error TS2463: Duplicate overload signature for foo12.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(103,1): error TS2463: Duplicate overload signature for foo12.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(106,1): error TS2463: Duplicate overload signature for foo13.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(107,1): error TS2463: Duplicate overload signature for foo13.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(110,1): error TS2463: Duplicate overload signature for foo14.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(111,1): error TS2463: Duplicate overload signature for foo14.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(114,1): error TS2463: Duplicate overload signature for foo15.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(115,1): error TS2463: Duplicate overload signature for foo15.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(118,1): error TS2463: Duplicate overload signature for foo16.
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts(119,1): error TS2463: Duplicate overload signature for foo16.


==== tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithNumericIndexers1.ts (46 errors) ====
    // object types are identical structurally
    
    class A {
        [x: number]: string;
    }
    
    class B {
        [x: number]: string;
    }
    
    class C<T> {
        [x: number]: T;
    }
    
    interface I {
        [x: number]: string;
    }
    
    class PA extends A {
    }
    
    class PB extends B {
    }
    
    var a: {
        [x: number]: string;
    }
    var b: { [x: number]: string; } = { foo: '' };
    
    function foo1(x: A);
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo1.
    function foo1(x: A); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo1.
    function foo1(x: any) { }
    
    function foo1b(x: B);
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo1b.
    function foo1b(x: B); // error
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo1b.
    function foo1b(x: any) { }
    
    function foo1c(x: C<string>);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo1c.
    function foo1c(x: C<string>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo1c.
    function foo1c(x: any) { }
    
    function foo2(x: I);
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo2.
    function foo2(x: I); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo2.
    function foo2(x: any) { }
    
    function foo3(x: typeof a);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo3.
    function foo3(x: typeof a); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo3.
    function foo3(x: any) { }
    
    function foo4(x: typeof b);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo4.
    function foo4(x: typeof b); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo4.
    function foo4(x: any) { }
    
    function foo5(x: A);
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo5.
    function foo5(x: B); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo5.
    function foo5(x: any) { }
    
    function foo5b(x: A);
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo5b.
    function foo5b(x: C<string>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo5b.
    function foo5b(x: any) { }
    
    function foo5c(x: A);
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo5c.
    function foo5c(x: PA); // error
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo5c.
    function foo5c(x: any) { }
    
    function foo5d(x: A);
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo5d.
    function foo5d(x: PB); // error
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo5d.
    function foo5d(x: any) { }
    
    function foo6(x: A);
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo6.
    function foo6(x: I); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo6.
    function foo6(x: any) { }
    
    function foo7(x: A);
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo7.
    function foo7(x: typeof a); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo7.
    function foo7(x: any) { }
    
    function foo8(x: B);
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo8.
    function foo8(x: I); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo8.
    function foo8(x: any) { }
    
    function foo9(x: B);
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo9.
    function foo9(x: C<string>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo9.
    function foo9(x: any) { }
    
    function foo10(x: B);
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo10.
    function foo10(x: typeof a); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo10.
    function foo10(x: any) { }
    
    function foo11(x: B);
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo11.
    function foo11(x: typeof b); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo11.
    function foo11(x: any) { }
    
    function foo11b(x: B);
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo11b.
    function foo11b(x: PA); // error
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo11b.
    function foo11b(x: any) { }
    
    function foo11c(x: B);
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo11c.
    function foo11c(x: PB); // error
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo11c.
    function foo11c(x: any) { }
    
    function foo12(x: I);
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo12.
    function foo12(x: C<string>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo12.
    function foo12(x: any) { }
    
    function foo13(x: I);
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo13.
    function foo13(x: typeof a); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo13.
    function foo13(x: any) { }
    
    function foo14(x: I);
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo14.
    function foo14(x: typeof b); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo14.
    function foo14(x: any) { }
    
    function foo15(x: I);
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo15.
    function foo15(x: PA); // error
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo15.
    function foo15(x: any) { }
    
    function foo16(x: I);
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo16.
    function foo16(x: PB); // error
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo16.
    function foo16(x: any) { }
    
    